Bug 255902 - [Cocoa] Netflix videos will not play, will eventually error
Summary: [Cocoa] Netflix videos will not play, will eventually error
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-24 19:41 PDT by Jer Noble
Modified: 2023-04-25 06:26 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2023-04-24 19:41:30 PDT
[Cocoa] Netflix videos will not play, will eventually error
Comment 1 Jer Noble 2023-04-24 19:41:36 PDT
<rdar://problem/108471471>
Comment 2 Jer Noble 2023-04-24 19:55:03 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13129
Comment 3 EWS 2023-04-25 06:26:47 PDT
Committed 263366@main (3db5312ccb75): <https://commits.webkit.org/263366@main>

Reviewed commits have been landed. Closing PR #13129 and removing active labels.