Cherry-pick 3db5312ccb75. rdar://problem/108471471

Unreviewed, reverting r262665@main.
    https://bugs.webkit.org/show_bug.cgi?id=255902
    rdar://108471471

    [Cocoa] Netflix videos will not play, will eventually error

    Reverted changeset:

    "[Cocoa] Enable SampleBufferContentKeySessionSupport by default"
    https://bugs.webkit.org/show_bug.cgi?id=255067
    https://commits.webkit.org/262665@main

    Canonical link: https://commits.webkit.org/263366@main
Identifier: 263289.1@safari-7616.1.12-branch