Source/WebKit/Shared/WebPreferencesDefaultValues.h
@@ -110,8 +110,4 @@ bool defaultUseSCContentSharingPicker();
 bool defaultPeerConnectionEnabledAvailable();
 #endif
 
-#if HAVE(AVCONTENTKEYSPECIFIER)
-bool defaultSampleBufferContentKeySessionSupportEnabled();
-#endif
-
 } // namespace WebKit
